// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CostCalculator renderApiCalls should run correctly 1`] = `
<tr>
  <td
    key="0"
  >
    100,000
  </td>
  <td
    key="1"
  />
  <td
    key="2"
  />
  <td
    key="3"
  />
  <td
    key="4"
  />
  <td
    key="5"
  />
  <td
    key="6"
  />
</tr>
`;

exports[`CostCalculator renderBand should run correctly 1`] = `
<tr>
  <td
    key="0"
  >
    1,000
  </td>
  <td
    key="1"
  >
    1,500
  </td>
  <td
    key="2"
  >
    2,500
  </td>
  <td
    key="3"
  >
    5,000
  </td>
  <td
    key="4"
  >
    15,000
  </td>
  <td
    key="5"
  >
    25,000
  </td>
  <td
    key="6"
  >
    50,000
  </td>
</tr>
`;

exports[`CostCalculator renderBandCostPerCall should run correctly 1`] = `
<tr>
  <td
    key="0"
  >
    £0.014500
  </td>
  <td
    key="1"
  >
    £0.011600
  </td>
  <td
    key="2"
  >
    £0.008700
  </td>
  <td
    key="3"
  >
    £0.007250
  </td>
  <td
    key="4"
  >
    £0.005800
  </td>
  <td
    key="5"
  >
    £0.003625
  </td>
  <td
    key="6"
  >
    £0.001450
  </td>
</tr>
`;

exports[`CostCalculator renderCostPerBand should run correctly 1`] = `
<tr>
  <td
    key="0"
  >
    £14.50
  </td>
  <td
    key="1"
  >
    £17.40
  </td>
  <td
    key="2"
  >
    £21.75
  </td>
  <td
    key="3"
  >
    £36.25
  </td>
  <td
    key="4"
  >
    £87.00
  </td>
  <td
    key="5"
  >
    £90.63
  </td>
  <td
    key="6"
  >
    £72.50
  </td>
</tr>
`;

exports[`CostCalculator renderEndpointsUsed should run correctly 1`] = `
<tr>
  <td
    key="0"
  >
    21-30
  </td>
  <td
    key="1"
  />
  <td
    key="2"
  />
  <td
    key="3"
  />
  <td
    key="4"
  />
  <td
    key="5"
  />
  <td
    key="6"
  />
</tr>
`;

exports[`CostCalculator should match a snapshot 1`] = `""`;
